[package]
name = "maid"
version = "1.0.0"
authors = ["Luke Wilson"]
description = "A modern package manager for C and C++."
documentation = "https://github.com/asmoaesl/maid/wiki"
repository = "https://github.com/asmoaesl/maid"
readme = "readme.md"
keywords = ["package", "manager", "build", "tool", "c"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]
license = "GPL-3.0"
exclude = [
    "etc/*"
]

[dependencies]
ansi_term = "0.10.2"
# Argument parsing
structopt = "0.1.6"
structopt-derive = "0.1.6"
# TOML
serde = "1.0.24"
serde_derive = "1.0.24"
toml = "0.4"
